@@ -1,3 +1,8 @@
+2005-06-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* LilyPond.py (TinyTinyDocument.init): init
+	ProcessLogWindowController to None.
+
 2005-06-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* LilyPond.py (google_lilypond): new function. Provide context
